internal/generator/output/interop_array.h

typedef struct {
    void* data;
    int length;
    int elementSize;
} GoArray;
typedef struct {
    uint32_t v0;
    uint32_t v1;
    uint32_t v2;
    uint32_t v3;
} Color_RGBA64_RGBA_Result;
void Go_ReleaseHandle(uint64_t handle);
uint64_t Block_ExplosionConfig_Ctor(void);
void Block_ExplosionConfig_Explode(uint64_t self, uint64_t p1, uint64_t p2);
uint64_t Bossbar_BossBar_Ctor(void);
uint64_t Bossbar_BossBar_Colour(uint64_t self);
double Bossbar_BossBar_HealthPercentage(uint64_t self);
char* Bossbar_BossBar_Text(uint64_t self);
uint64_t Bossbar_BossBar_WithColour(uint64_t self, uint64_t p1);
uint64_t Bossbar_BossBar_WithHealthPercentage(uint64_t self, double p1);
uint64_t Bossbar_Colour_Ctor(void);
uint8_t Bossbar_Colour_Uint8(uint64_t self);
uint64_t Chat_Translation_Ctor(void);
uint64_t Chat_Translation_Enc(uint64_t self, char* p1);
uint64_t Chat_Translation_F(uint64_t self, uint64_t p1);
char* Chat_Translation_Resolve(uint64_t self, uint64_t p1);
bool Chat_Translation_Zero(uint64_t self);
uint64_t Cmd_Output_Ctor(void);
void Cmd_Output_Error(uint64_t self, uint64_t p1);
int Cmd_Output_ErrorCount(uint64_t self);
void Cmd_Output_Errorf(uint64_t self, char* p1, uint64_t p2);
GoArray Cmd_Output_Errors(uint64_t self);
void Cmd_Output_Errort(uint64_t self, uint64_t p1, uint64_t p2);
int Cmd_Output_MessageCount(uint64_t self);
GoArray Cmd_Output_Messages(uint64_t self);
void Cmd_Output_Print(uint64_t self, uint64_t p1);
void Cmd_Output_Printf(uint64_t self, char* p1, uint64_t p2);
void Cmd_Output_Printt(uint64_t self, uint64_t p1, uint64_t p2);
uint64_t Color_RGBA64_Ctor(void);
Color_RGBA64_RGBA_Result Color_RGBA64_RGBA(uint64_t self);
uint64_t Cube_BBox_Ctor(void);
GoArray Cube_BBox_Corners(uint64_t self);
uint64_t Cube_BBox_Extend(uint64_t self, uint64_t p1);
uint64_t Cube_BBox_ExtendTowards(uint64_t self, int p1, double p2);
uint64_t Cube_BBox_Grow(uint64_t self, double p1);
uint64_t Cube_BBox_GrowVec3(uint64_t self, uint64_t p1);
double Cube_BBox_Height(uint64_t self);
bool Cube_BBox_IntersectsWith(uint64_t self, uint64_t p1);
double Cube_BBox_Length(uint64_t self);
GoArray Cube_BBox_Max(uint64_t self);
GoArray Cube_BBox_Min(uint64_t self);
uint64_t Cube_BBox_Mul(uint64_t self, double p1);
uint64_t Cube_BBox_Stretch(uint64_t self, int p1, double p2);
uint64_t Cube_BBox_Translate(uint64_t self, uint64_t p1);
uint64_t Cube_BBox_TranslateTowards(uint64_t self, int p1, double p2);
bool Cube_BBox_Vec3Within(uint64_t self, uint64_t p1);
bool Cube_BBox_Vec3WithinXY(uint64_t self, uint64_t p1);
bool Cube_BBox_Vec3WithinXZ(uint64_t self, uint64_t p1);
bool Cube_BBox_Vec3WithinYZ(uint64_t self, uint64_t p1);
double Cube_BBox_Volume(uint64_t self);
double Cube_BBox_Width(uint64_t self);
void World_World_Save(uint64_t self);
void World_World_SetDefaultGameMode(uint64_t self, uint64_t p1);
void World_World_SetDifficulty(uint64_t self, uint64_t p1);
void World_World_SetPlayerSpawn(uint64_t self, uint64_t p1, uint64_t p2);
void World_World_SetRequiredSleepDuration(uint64_t self, int64_t p1);
void World_World_SetSpawn(uint64_t self, uint64_t p1);
void World_World_SetTickRange(uint64_t self, int p1);
void World_World_SetTime(uint64_t self, int p1);
GoArray World_World_Spawn(uint64_t self);
void World_World_StartRaining(uint64_t self, int64_t p1);
void World_World_StartThundering(uint64_t self, int64_t p1);
void World_World_StartTime(uint64_t self);
void World_World_StartWeatherCycle(uint64_t self);
void World_World_StopRaining(uint64_t self);
void World_World_StopThundering(uint64_t self);
void World_World_StopTime(uint64_t self);
void World_World_StopWeatherCycle(uint64_t self);
int World_World_Time(uint64_t self);
bool World_World_TimeCycle(uint64_t self);