internal/generator/output/interop_bindings.g.cs


    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern void World_World_Save(ulong self);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern void World_World_SetDefaultGameMode(ulong self, ulong p1);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern void World_World_SetDifficulty(ulong self, ulong p1);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern void World_World_SetPlayerSpawn(ulong self, ulong p1, ulong p2);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern void World_World_SetRequiredSleepDuration(ulong self, long p1);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern void World_World_SetSpawn(ulong self, ulong p1);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern void World_World_SetTickRange(ulong self, int p1);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern void World_World_SetTime(ulong self, int p1);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern GoArrayNative World_World_Spawn(ulong self);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern void World_World_StartRaining(ulong self, long p1);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern void World_World_StartThundering(ulong self, long p1);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern void World_World_StartTime(ulong self);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern void World_World_StartWeatherCycle(ulong self);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern void World_World_StopRaining(ulong self);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern void World_World_StopThundering(ulong self);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern void World_World_StopTime(ulong self);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern void World_World_StopWeatherCycle(ulong self);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern int World_World_Time(ulong self);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern byte World_World_TimeCycle(ulong self);

}

public sealed class Block_ExplosionConfig
{
    public ulong Handle { get; }

    public Block_ExplosionConfig(ulong handle)
    {
        Handle = handle;
    }

    public static Block_ExplosionConfig New() => new Block_ExplosionConfig(Native.Block_ExplosionConfig_Ctor());

    public void Release() => Native.Go_ReleaseHandle(Handle);

    public void Explode(World_Tx p1, ulong p2)
    {
        Native.Block_ExplosionConfig_Explode(Handle, p1 is null ? 0UL : p1.Handle, p2);
    }

}

public sealed class Bossbar_BossBar
{
    public ulong Handle { get; }

    public Bossbar_BossBar(ulong handle)
    {
        Handle = handle;
    }

    public static Bossbar_BossBar New() => new Bossbar_BossBar(Native.Bossbar_BossBar_Ctor());

    public void Release() => Native.Go_ReleaseHandle(Handle);

    public Bossbar_Colour Colour()
    {
        var result = Native.Bossbar_BossBar_Colour(Handle);
        return new Bossbar_Colour(result);
    }

    public double HealthPercentage()
    {
        var result = Native.Bossbar_BossBar_HealthPercentage(Handle);
        return result;
    }

    public string Text()
    {
        var result = Native.Bossbar_BossBar_Text(Handle);
        return InteropHelpers.ConsumeCString(result);
    }

    public Bossbar_BossBar WithColour(Bossbar_Colour p1)
    {
        var result = Native.Bossbar_BossBar_WithColour(Handle, p1 is null ? 0UL : p1.Handle);
        return new Bossbar_BossBar(result);
    }

    public Bossbar_BossBar WithHealthPercentage(double p1)
    {
        var result = Native.Bossbar_BossBar_WithHealthPercentage(Handle, p1);
        return new Bossbar_BossBar(result);
    }

}

public sealed class Bossbar_Colour
{
    public ulong Handle { get; }

    public Bossbar_Colour(ulong handle)
    {
        Handle = handle;
    }

    public static Bossbar_Colour New() => new Bossbar_Colour(Native.Bossbar_Colour_Ctor());

    public void Release() => Native.Go_ReleaseHandle(Handle);

    public byte Uint8()
    {
        var result = Native.Bossbar_Colour_Uint8(Handle);
        return result;
    }

}

public sealed class Chat_Translation
{
    public ulong Handle { get; }

    public Chat_Translation(ulong handle)
    {
        Handle = handle;
    }

    public static Chat_Translation New() => new Chat_Translation(Native.Chat_Translation_Ctor());

    public void Release() => Native.Go_ReleaseHandle(Handle);

    public Chat_Translation Enc(string p1)
    {
        IntPtr p1Native = Marshal.StringToCoTaskMemUTF8(p1);
        try
        {
            var result = Native.Chat_Translation_Enc(Handle, p1Native);
            return new Chat_Translation(result);
        }
        finally
        {
            if (p1Native != IntPtr.Zero)
            {
                Marshal.FreeCoTaskMem(p1Native);
            }
        }
    }

    public ulong F(ulong p1)
    {
        var result = Native.Chat_Translation_F(Handle, p1);
        return result;
    }

    public string Resolve(Language_Tag p1)
    {
        var result = Native.Chat_Translation_Resolve(Handle, p1 is null ? 0UL : p1.Handle);
        return InteropHelpers.ConsumeCString(result);
    }

    public bool Zero()
    {
        var result = Native.Chat_Translation_Zero(Handle);
        return result != 0;
    }

}

public sealed class Cmd_Output
{
    public ulong Handle { get; }

    public Cmd_Output(ulong handle)
    {
        Handle = handle;
    }

    public static Cmd_Output New() => new Cmd_Output(Native.Cmd_Output_Ctor());

    public void Release() => Native.Go_ReleaseHandle(Handle);

    public void Error(ulong p1)
    {
        Native.Cmd_Output_Error(Handle, p1);
    }

    public int ErrorCount()
    {
        var result = Native.Cmd_Output_ErrorCount(Handle);
        return result;
    }

    public void Errorf(string p1, ulong p2)
    {
        IntPtr p1Native = Marshal.StringToCoTaskMemUTF8(p1);
        try
        {
            Native.Cmd_Output_Errorf(Handle, p1Native, p2);
        }
        finally
        {
            if (p1Native != IntPtr.Zero)
            {
                Marshal.FreeCoTaskMem(p1Native);
            }
        }
    }

    public GoArray<ulong> Errors()
    {
        var result = Native.Cmd_Output_Errors(Handle);
        return new GoArray<ulong>(result.Data, result.Length, result.ElementSize);
    }

    public void Errort(Chat_Translation p1, ulong p2)
    {
        Native.Cmd_Output_Errort(Handle, p1 is null ? 0UL : p1.Handle, p2);
    }

    public int MessageCount()
    {
        var result = Native.Cmd_Output_MessageCount(Handle);
        return result;
    }

    public GoArray<ulong> Messages()
    {
        var result = Native.Cmd_Output_Messages(Handle);
        return new GoArray<ulong>(result.Data, result.Length, result.ElementSize);
    }

    public void Print(ulong p1)
    {
        Native.Cmd_Output_Print(Handle, p1);
    }

    public void Printf(string p1, ulong p2)
    {
        IntPtr p1Native = Marshal.StringToCoTaskMemUTF8(p1);
        try
        {
            Native.Cmd_Output_Printf(Handle, p1Native, p2);
        }
        finally
        {
            if (p1Native != IntPtr.Zero)
            {
                Marshal.FreeCoTaskMem(p1Native);
            }
        }
    }

    public void Printt(Chat_Translation p1, ulong p2)
    {
        Native.Cmd_Output_Printt(Handle, p1 is null ? 0UL : p1.Handle, p2);
    }

}

public sealed class Color_RGBA64
{
    public ulong Handle { get; }

    public Color_RGBA64(ulong handle)
    {
        Handle = handle;
    }

    public static Color_RGBA64 New() => new Color_RGBA64(Native.Color_RGBA64_Ctor());

    public void Release() => Native.Go_ReleaseHandle(Handle);

    public Color_RGBA64_RGBA_Result Rgba()
    {
        var result = Native.Color_RGBA64_RGBA(Handle);
        return result;
    }

}

public sealed class Cube_BBox
{
    public ulong Handle { get; }

    public Cube_BBox(ulong handle)
    {
        Handle = handle;
    }

    public static Cube_BBox New() => new Cube_BBox(Native.Cube_BBox_Ctor());

    public void Release() => Native.Go_ReleaseHandle(Handle);

    public GoArray<ulong> Corners()
    {
        var result = Native.Cube_BBox_Corners(Handle);
        return new GoArray<ulong>(result.Data, result.Length, result.ElementSize);
    }

    public Cube_BBox Extend(ulong p1)
    {
        var result = Native.Cube_BBox_Extend(Handle, p1);
        return new Cube_BBox(result);
    }

    public Cube_BBox ExtendTowards(int p1, double p2)
    {
        var result = Native.Cube_BBox_ExtendTowards(Handle, p1, p2);
        return new Cube_BBox(result);
    }

    public Cube_BBox Grow(double p1)
    {
        var result = Native.Cube_BBox_Grow(Handle, p1);
        return new Cube_BBox(result);
    }

    public Cube_BBox GrowVec3(ulong p1)
    {
        var result = Native.Cube_BBox_GrowVec3(Handle, p1);
        return new Cube_BBox(result);
    }

    public double Height()
    {
        var result = Native.Cube_BBox_Height(Handle);
        return result;
    }

    public bool IntersectsWith(Cube_BBox p1)
    {
        var result = Native.Cube_BBox_IntersectsWith(Handle, p1 is null ? 0UL : p1.Handle);
        return result != 0;
    }

    public double Length()
    {
        var result = Native.Cube_BBox_Length(Handle);
        return result;
    }

    public GoArray<double> Max()
    {
        var result = Native.Cube_BBox_Max(Handle);
        return new GoArray<double>(result.Data, result.Length, result.ElementSize);
    }

    public GoArray<double> Min()
    {
        var result = Native.Cube_BBox_Min(Handle);
        return new GoArray<double>(result.Data, result.Length, result.ElementSize);
    }

    public Cube_BBox Mul(double p1)
    {
        var result = Native.Cube_BBox_Mul(Handle, p1);
        return new Cube_BBox(result);
    }

    public Cube_BBox Stretch(int p1, double p2)
    {
        var result = Native.Cube_BBox_Stretch(Handle, p1, p2);
        return new Cube_BBox(result);
    }

    public Cube_BBox Translate(ulong p1)
    {
        var result = Native.Cube_BBox_Translate(Handle, p1);
        return new Cube_BBox(result);
    }

    public Cube_BBox TranslateTowards(int p1, double p2)
    {
        var result = Native.Cube_BBox_TranslateTowards(Handle, p1, p2);
        return new Cube_BBox(result);
    }

    public bool Vec3Within(ulong p1)
    {
        var result = Native.Cube_BBox_Vec3Within(Handle, p1);
        return result != 0;
    }

    public bool Vec3WithinXy(ulong p1)
    {
        var result = Native.Cube_BBox_Vec3WithinXY(Handle, p1);
        return result != 0;
    }

    public bool Vec3WithinXz(ulong p1)
    {
        var result = Native.Cube_BBox_Vec3WithinXZ(Handle, p1);
        return result != 0;
    }

    public bool Vec3WithinYz(ulong p1)
    {
        var result = Native.Cube_BBox_Vec3WithinYZ(Handle, p1);
        return result != 0;
    }

    public double Volume()
    {
        var result = Native.Cube_BBox_Volume(Handle);
        return result;
    }

    public double Width()
    {
        var result = Native.Cube_BBox_Width(Handle);
        return result;
    }
